# rpi0-rust-autocorrect

./: .gitignore  Cargo.toml  justfile  linker.ld  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
src/bsp/: gpio.rs
