[package]
name = "rpi0-rust-autocorrect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
